# auto-ria-parser-to-excel

./: .env  .gitignore  README.md  __main__.py  info_cars.csv  pyproject.toml  requirements.txt
assets/: ezgif.com-video-to-gif.webm
core/: excel.py  parse_cars.py  settings.py
logic/: excel.py  parse_cars.py  settings.py
